--- a/src/landingPage/landingPage.css
+++ b/src/landingPage/landingPage.css
@@ -2,8 +2,9 @@
 
 body {
   margin: 0px;
-  background-image: linear-gradient(to bottom, #dfe9f3 0%, white 100%);
-  background-size: cover;
+  /* background-image: linear-gradient(to bottom, #dfe9f3 0%, white 100%);
+  background-size: cover; */
+  background-color: white;
   min-height: max-content;
 }
 
