--- a/src/landingPage/components/Product/Product.css
+++ b/src/landingPage/components/Product/Product.css
@@ -1,6 +1,9 @@
+
+
 @charset "UTF-8";.animate-fade-in {
     opacity: 0
 }
+
 
 .animate-fade-in.animate-fade-in--visible {
     -webkit-animation-name: animateInUp;
@@ -311,23 +314,26 @@ h1,h2,h3,h4,h5,h6 {
 
 .card-text__header {
     text-transform: uppercase;
-    font-size: 3rem;
-    line-height: 1.125rem;
-    color: #666e7e;
+    font-size: 2.4rem;
+    line-height: 1.1rem;
+    color: #F5946B;
     font-weight: 800;
     margin-bottom: 4%
 }
 
 .card-text__title {
-    font-size: 2rem;
+    font-size: 1.9rem;
     line-height: 2.25rem;
     font-weight: 800;
-    margin-bottom: 2%
+    margin-bottom: 2%;
 }
 
 .card-text__description {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.8rem;
     font-size:1.7rem;
+    font-weight: 300;
+    color:#333;
+    line-height: 1.5em;
 }
 
 .card-text__link,.card-text__link:active,.card-text__link:hover,.card-text__link:visited {
@@ -445,11 +451,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .how-works__title {
+    color: #CAA3DA;
     font-size: 6rem;
     line-height: 6rem;
     font-weight: 800;
     max-width: 100rem;
-    margin: 0 auto
+    margin: 0 auto;
+    text-shadow: 7px 7px 0 #333;
 }
 
 .how-works__subtitle {
