--- a/maria/lesson-structure/src/index.css
+++ b/maria/lesson-structure/src/index.css
@@ -1,69 +1,167 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  padding: 10px 20px;
+  background: #111;
+  color: #fff;
+  border: none;
+  outline: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 5px;
+  font-size: 15px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.navbar {
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  border-bottom: 1px solid #d5d5d5;
+}
+
+.navbar .logo {
+  color: #111;
+}
+
+.quiz-container {
+  position: relative;
+  margin: 50px auto 20px;
+  width: 95%;
+  max-width: 650px;
+  min-height: 350px;
+  background: #fff;
+  border: 1px solid #eee;
+  box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.05);
+}
+
+.join-screen {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
+  padding: 20px;
+}
+
+.join-screen h2 {
+  font-size: 25px;
+  color: #111;
+}
+
+.join-screen p {
+  max-width: 350px;
+  color: #555;
+}
+
+.quiz-screen .question .progress-bar {
+  width: 0%;
+  height: 5px;
+}
+
+.quiz-screen .question .progress-bar .active {
+  animation: progress 10s linear;
+}
+
+.quiz-screen .question .question-count {
+  margin: 20px 0px;
+  text-align: center;
+  font-size: 15px;
+  color: #555;
+}
+
+.quiz-screen .question .main {
+  padding: 20px 40px;
+}
+
+.quiz-screen .question .main .title span {
+  font-size: 15px;
+  color: #555;
+  font-weight: 600;
+}
+
+.quiz-screen .question .main .title p {
+  margin-top: 5px;
+  color: #111;
+}
+
+.quiz-screen .question .main .options {
+  margin: 40px 0px 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.quiz-screen .question .main .options .option {
+  width: calc(50% - 20px);
+  border: 1px solid #bbb;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.quiz-screen .question .main .options .option.active {
+  background: #1428cd;
+  color: #fff;
+}
+
+.quiz-screen .question .control {
+  padding:  10px 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-top: 1px solid #eee;
+}
+
+.result-screen {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+
+@keyframes progress {
+  0% {
+    width: 0%;
+    background: #555;
   }
-  a:hover {
-    color: #747bff;
+  79% {
+    width: 79%;
+    background: #555;
   }
-  button {
-    background-color: #f9f9f9;
+  80% {
+    width: 80%;
+    background: orangered;
+  }
+  100% {
+    width: 100%;
+    background: orangered;
   }
 }
+
+
+
