--- a/client/src/signUpIn/components/ForgotPassword/ForgotPassword.css
+++ b/client/src/signUpIn/components/ForgotPassword/ForgotPassword.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .form_container_fp {
@@ -22,7 +23,7 @@
 	color: #333;
 	margin-bottom: 10px;
 	/* text-shadow: 5px 5px 0 rgb(51, 51, 51, 0.4); */
-	text-shadow: 3.5px 3.5px 0 #78e4cc;
+	text-shadow: 3.5px 3.5px 0 #caa3da;
 }
 
 .input-field {
@@ -39,9 +40,6 @@
   border: 1px solid #333;
 }
 
-.signup_input:hover {
-  border: 1px solid #78e4cc;
-}
 
 .input-field i {
   text-align: center;
@@ -69,7 +67,7 @@
 .forgotpass_btn {
 	max-width: 380px;
 	width: 100%;
-	background-color: #78e4cc;
+	background-color: #caa3da;
 	border: 3px solid #333;
 	outline: none;
 	height: 50px;
