--- a/client/src/signUpIn/components/ForgotPassword/ForgotPassword.css
+++ b/client/src/signUpIn/components/ForgotPassword/ForgotPassword.css
@@ -49,7 +49,7 @@
   font-size: 1.2rem;
 }
 
-.input-field input {
+.input-field .forgotpass_input {
   background: none;
   outline: none;
   border: none;
@@ -59,7 +59,7 @@
   color: #333;
 }
 
-.input-field input::placeholder {
+.input-field .forgotpass_input::placeholder {
   color: #aaa;
   font-weight: 500;
 }
