--- a/client/src/signUpIn/components/Login/Login.css
+++ b/client/src/signUpIn/components/Login/Login.css
@@ -1,3 +1,11 @@
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .login_container {
   width: 100%;
   min-height: 100vh;
