fixed some css, added new links to the profile, minor changes

--- a/client/src/userDashboard/components/DropDown/DropDown.css
+++ b/client/src/userDashboard/components/DropDown/DropDown.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-bg: #242526;
-  --secondary-bg: #fff;
+  --primary-bg: #333;
+  --secondary-bg: #B7EDDF;
   --primary-text-color: #333;
   --secondary-text-color: #cecece;
   --border-radius: 8px;
@@ -20,6 +20,7 @@ a {
   text-decoration: none;
 }
 
+
 .menu-trigger .nav_dash_ddm_icon {
   position: absolute;
   top: 20px;
@@ -34,19 +35,24 @@ a {
 
 .nav_dash_ddm {
   position: absolute;
-  top: 0;
-  right: 20px;
-  background-color: #fff;
+  /* top: 0; */
+  right: 0px;
+  background-color: var(--secondary-bg);
   border-radius: var(--border-radius);
   padding: 10px 20px;
   width: 200px;
+  top: 100%;
+  /* left: 0px; */
+  margin: 10px 20px;
+  z-index: 1; /* added to position the dropdown above the trigger */
 }
+
 
 .nav_dash_ddm::before {
   content: "";
   position: absolute;
   top: -5px;
-  right: 20px;
+  right: 5px;
   height: 20px;
   width: 20px;
   background: var(--secondary-bg);
@@ -80,7 +86,7 @@ a {
 
 .nav_dash_ddm_h3 span {
   font-size: .7em;
-  color: var(--secondary-text-color);
+  color: var(--primary-text-color);
   font-weight: 400;
 }
 
@@ -107,7 +113,7 @@ a {
 .nd_dropdownItem .nav_dash_ddm_icon {
   max-width: 20px;
   margin-right: 10px;
-  opacity: 0.5;
+  opacity: 0.7;
   transition: var(--speed);
 }
 
@@ -151,7 +157,7 @@ a {
   font-size: 1.2em;
   border-radius: 30px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: var(--secondary-bg);
   display: block;
 }
 
@@ -159,28 +165,6 @@ a {
   width: 12%;
   display: inline-block;
   height: 5%;
-}
-
-.nav_dash_ddm {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #fff;
-  border-radius: var(--border-radius);
-  margin: 10px 20px;
-  width: 200px;
-  z-index: 1; /* added to position the dropdown above the trigger */
-}
-
-.nav_dash_ddm::before {
-  content: "";
-  position: absolute;
-  top: -5px;
-  left: 20px;
-  height: 20px;
-  width: 20px;
-  background: var(--secondary-bg);
-  transform: rotate(45deg);
 }
 
 .nav_dash_ddm.active {
