--- a/client/src/userDashboard/components/navbar/Navbar.css
+++ b/client/src/userDashboard/components/navbar/Navbar.css
@@ -30,12 +30,13 @@
   position: fixed;
   top: 0;
   left: -100%;
-  transition: 850ms;
+  transition: 350ms;
 }
 
 .nav-menu.active {
   left: 0;
   transition: 350ms;
+  z-index: 9999999;
 }
 
 .nav-text {
