--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Neucha");
+/* @import url("https://fonts.googleapis.com/css?family=Neucha"); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 body {
   margin: 0px;
-  /* background-image: linear-gradient(to bottom, #dfe9f3 0%, white 100%);
-  background-size: cover; */
   background-color: white;
   min-height: max-content;
 }
