--- a/client/src/components/userDashboard/components/sidebar/Sidebar.css
+++ b/client/src/components/userDashboard/components/sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .move_left{
-  margin-left:250px;
+  margin-left:270px;
 }
 
 .navbar_dashboard {
@@ -27,7 +27,7 @@
   background-color:rgb(255, 198, 205, 0.8);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px); /* for Safari */
-  width: 250px;
+  width: 270px;
   height: 100vh;
   justify-content: center;
   /* position: fixed; */
@@ -49,8 +49,8 @@
 
 .nav-text {
   display: flex;
-  justify-content: start;
-  align-items: center;
+  justify-content: flex-start; /* Update this */
+  align-items: center; /* Update this */
   padding: 8px 0px 8px 3px;
   list-style: none;
   height: 80px;
@@ -65,7 +65,7 @@
 .nav-text a {
   text-decoration: none;
   color: #333;
-  font-size: 1.6em;
+  font-size: 1.4em;
   text-transform: uppercase;
   width: 95%;
   height: 100%;
@@ -86,10 +86,6 @@
 }
 
 .navbar-toggle {
-  /* background-color:rgb(255, 198, 205, 0.8);
-  backdrop-filter: blur(5px); */
-  /* -webkit-backdrop-filter: blur(5px);  */
-  /* for Safari */
   width: 100%;
   height: 80px;
   display: flex;
@@ -99,11 +95,13 @@
 
 .nav_dash_li {
   margin-left: .77em;
-  margin-top:2%;
+  margin-top:auto;
+  margin-bottom: auto;
 }
 
 .nav_dash_icon{
   width:22%;
+  font-size:1.6em;
 }
 
 
