--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,17 @@
 *{
     font-family: 'Poppins', sans-serif;
   }
+
+
+  /* Hide scrollbar for all elements */
+body::-webkit-scrollbar {
+  width: 0em;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
