--- a/client/src/components/profile/components/editProfile/editProfile.css
+++ b/client/src/components/profile/components/editProfile/editProfile.css
@@ -82,7 +82,24 @@
   transition: 0.5s;
 }
 
-.editprofile_btn:hover, .savechanges_btn:hover {
+.deleteaccount_btn{
+  
+  max-width: 10em;
+  width: 100%;
+  background-color: #F87171;
+  border: 3px solid #000;
+  outline: none;
+  height: 40px;
+  border-radius: 45px;
+  color: var(--black2);
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.editprofile_btn:hover, .savechanges_btn:hover, .deleteaccount_btn:hover {
   transform: translateY(-5px);
   border-bottom-width: var(--border-radius);
 }
