--- a/client/src/components/signUpIn/components/Login/Login.css
+++ b/client/src/components/signUpIn/components/Login/Login.css
@@ -9,7 +9,7 @@ input:-webkit-autofill:active{
 .login_container {
   width: 100%;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
