--- a/client/src/components/lessonStructure/Quiz.css
+++ b/client/src/components/lessonStructure/Quiz.css
@@ -33,7 +33,7 @@
   align-items: center;
   gap: 20px;
   text-align: center;
-  padding: 20px;
+  padding-bottom: 20px;
 }
 .join-screen{
   background-color: #B7EDDF;
