--- a/client/src/components/signUpIn/components/Signup/signup.css
+++ b/client/src/components/signUpIn/components/Signup/signup.css
@@ -7,9 +7,26 @@
   justify-content: center;
 }
 
+.mailsent_container {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .signup_form_container {
   width: 900px;
-  height: 560px;
+  height: 620px;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
+    0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
+.mailsent_form_container{
+  max-width: 900px;
+  max-height: 650px;
   display: flex;
   border-radius: 10px;
   box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
@@ -22,7 +39,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #78e4cc;
+  background-color: #caa3da;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -81,7 +98,7 @@
   color: #333;
   margin-bottom: 10px;
   /* text-shadow: 5px 5px 0 rgb(51, 51, 51, 0.4); */
-  text-shadow: 5px 5px 0 #78e4cc;
+  text-shadow: 5px 5px 0 #caa3da;
 }
 
 /* .signup_input {
@@ -151,7 +168,7 @@
 .signup_btn {
   max-width: 380px;
   width: 100%;
-  background-color: #78e4cc;
+  background-color: #caa3da;
   border: 3px solid #333;
   outline: none;
   height: 50px;
