--- a/client/src/components/signUpIn/components/ForgotPassword/ForgotPassword.css
+++ b/client/src/components/signUpIn/components/ForgotPassword/ForgotPassword.css
@@ -8,7 +8,7 @@
 }
 
 .form_container_fp {
-  width: 600px;
+  width: 700px;
   padding: 20px;
   background-color: white;
   border-radius: 10px;
@@ -19,6 +19,7 @@
     0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
 .form_container_fp h1 {
+  text-align: center;
 	font-size: 3.2rem;
 	color: #333;
 	margin-bottom: 10px;
@@ -55,7 +56,7 @@
   border: none;
   line-height: 1;
   font-weight: 600;
-  font-size: 1.45rem;
+  font-size: 1.15rem;
   color: #333;
 }
 
