--- a/client/src/components/signUpIn/components/PasswordReset/PasswordReset.css
+++ b/client/src/components/signUpIn/components/PasswordReset/PasswordReset.css
@@ -4,10 +4,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin:auto;
 }
 
 .form_container_rp {
-	width: 600px;
+	max-width: 900px;
 	padding: 20px;
 	background-color: white;
 	border-radius: 10px;
