implemented reset password fully.... T T

--- a/client/src/components/signUpIn/components/PasswordReset/PasswordReset.css
+++ b/client/src/components/signUpIn/components/PasswordReset/PasswordReset.css
@@ -1,16 +1,17 @@
-.container {
+.container_rp {
 	width: 100vw;
 	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-color: #f5f5f5;
 	margin:auto;
 }
 
 .form_container_rp {
 	max-width: 900px;
 	padding: 20px;
-	background-color: white;
+	background-color: #fff;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
