--- a/client/src/components/signUpIn/components/Login/Login.css
+++ b/client/src/components/signUpIn/components/Login/Login.css
@@ -9,7 +9,7 @@ input:-webkit-autofill:active{
 .login_container {
   width: 100%;
   min-height: 100vh;
-  background-color: #fff;
+  background-color: #f5f5f5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +18,7 @@ input:-webkit-autofill:active{
 
 .login_form_container {
   width: 900px;
-  height: 500px;
+  height: 550px;
   display: flex;
   border-radius: 10px;
   box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
