--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,13 +20,13 @@
 
   /* Hide scrollbar for all elements */
 body::-webkit-scrollbar {
-  width: 0em;
+  width: .5em;
 }
 
 body::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: #f5f5f5;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: transparent;
+  background-color: #FED885;
 }
